--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     </head>
     <body>
+        <img class="bg-img" src="./includes/images/bg_3.png" />
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
             <a class="navbar-brand" href="#">{{Ouals_Logo}}</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
